<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:id="@+id/liner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo_view"
            android:layout_width="194dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/imagen1"
            android:textAlignment="center"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/message_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/message1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note60_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/note60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note60_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/advance1_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/message2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note7_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/note7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note7_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/advance2_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/message3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note8_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/note8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note8_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/pfinal_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/message4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note25_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/note25">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note25_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/botton"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/info_prom_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>